# Projects

./: .gitignore  README.md
.github/workflows/: deploy-portfolio.yml
01-LLM-RAG/research-assistant/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
01-LLM-RAG/research-assistant/.github/workflows/: ci.yml
01-LLM-RAG/research-assistant/.huggingface/: SPACE_README.md
01-LLM-RAG/research-assistant/docs/: INTERVIEW_NOTES.md
01-LLM-RAG/research-assistant/scripts/: deploy_hf_space.sh
01-LLM-RAG/research-assistant/src/: config.py
01-LLM-RAG/research-assistant/src/graph/: __init__.py  workflow.py
01-LLM-RAG/research-assistant/src/ingestion/: web_loader.py
01-LLM-RAG/research-assistant/src/llm/: __init__.py  prompts.py
01-LLM-RAG/research-assistant/src/retrieval/: __init__.py  retriever.py
01-LLM-RAG/research-assistant/src/utils/: __init__.py
01-LLM-RAG/research-assistant/tests/: test_config.py  test_retriever.py
01-LLM-RAG/research-assistant/tmp-hf-space/: Dockerfile  README.md  docker-compose.yml
01-LLM-RAG/research-assistant/tmp-hf-space/docs/: ARCHITECTURE.md  DEPLOYMENT.md
01-LLM-RAG/research-assistant/tmp-hf-space/research_assistant/: README.md
01-LLM-RAG/research-assistant/tmp-hf-space/src/: pipeline.py
01-LLM-RAG/research-assistant/tmp-hf-space/src/ingestion/: __init__.py  arxiv_loader.py
01-LLM-RAG/research-assistant/tmp-hf-space/src/llm/: providers.py
01-LLM-RAG/research-assistant/tmp-hf-space/src/retrieval/: reranker.py  vector_store.py
01-LLM-RAG/research-assistant/tmp-hf-space/tests/: test_chunking.py
01-LLM-RAG/research-assistant/tmp-hf-space/tmp-hf-space/: api.py  app.py
01-LLM-RAG/research-assistant/tmp-hf-space/tmp-hf-space/data/: eval_questions.jsonl
01-LLM-RAG/research-assistant/tmp-hf-space/tmp-hf-space/research-assistant/: README.md
01-LLM-RAG/research-assistant/tmp-hf-space/tmp-hf-space/src/: __init__.py
01-LLM-RAG/research-assistant/tmp-hf-space/tmp-hf-space/src/evaluation/: run_eval.py
01-LLM-RAG/research-assistant/tmp-hf-space/tmp-hf-space/src/graph/: workflow.py
01-LLM-RAG/research-assistant/tmp-hf-space/tmp-hf-space/src/ingestion/: chunking.py
01-LLM-RAG/research-assistant/tmp-hf-space/tmp-hf-space/src/utils/: logging.py
02-NLP-FineTuning/dialogue-summarization/: .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
02-NLP-FineTuning/dialogue-summarization/.huggingface/: SPACE_README.md
02-NLP-FineTuning/dialogue-summarization/docs/: ARCHITECTURE.md  DEPLOYMENT.md  INTERVIEW_NOTES.md
02-NLP-FineTuning/dialogue-summarization/notebooks/: 01_finetune_samsum_lora.ipynb  02_evaluation_comparison.ipynb
02-NLP-FineTuning/dialogue-summarization/scripts/: deploy_hf_space.sh  push_to_hub.py
02-NLP-FineTuning/dialogue-summarization/src/: __init__.py  config.py  data.py  eval.py  infer.py  model.py  train.py
02-NLP-FineTuning/dialogue-summarization/tests/: test_config.py  test_data.py
03-EDA-Dashboards/la-crime-analysis/: .gitignore  Dockerfile  README.md  app.py  notebook.ipynb  pyproject.toml  requirements.txt
03-EDA-Dashboards/la-crime-analysis/.huggingface/: SPACE_README.md
03-EDA-Dashboards/la-crime-analysis/docs/: DEPLOYMENT.md  INTERVIEW_NOTES.md
03-EDA-Dashboards/la-crime-analysis/pages/: 1_Geography.py  2_Time_Patterns.py  3_Demographics.py
03-EDA-Dashboards/la-crime-analysis/scripts/: deploy_hf_space.sh
03-EDA-Dashboards/la-crime-analysis/src/: data.py  filters.py  viz.py
03-EDA-Dashboards/la-crime-analysis/tests/: test_data.py
04-Deep-Learning/text-classification-modernbert/: .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
04-Deep-Learning/text-classification-modernbert/.huggingface/: SPACE_README.md
04-Deep-Learning/text-classification-modernbert/docs/: ARCHITECTURE.md  DEPLOYMENT.md  INTERVIEW_NOTES.md
04-Deep-Learning/text-classification-modernbert/notebooks/: 02_finetune_banking77.ipynb
04-Deep-Learning/text-classification-modernbert/scripts/: deploy_hf_space.sh  push_to_hub.py
04-Deep-Learning/text-classification-modernbert/src/: __init__.py  calibration.py  config.py  data.py  eval.py  infer.py  model.py  train.py
04-Deep-Learning/text-classification-modernbert/tests/: test_calibration.py  test_config.py
EDA/Los Anglos Crime Analysis/.ipynb_checkpoints/: notebook-checkpoint.ipynb
docs/: INTERVIEW_GUIDE.md  MODERNIZATION_LOG.md  STUDY_PLAN.md
portfolio/: 404.html  README.md  index.html
portfolio/scripts/: deploy.sh  main.js  neural-bg.js
portfolio/styles/: animations.css  main.css  responsive.css
