[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-assistant"
version = "0.1.0"
description = "Production-grade RAG research assistant with LangGraph"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ahmed Mostafa" }]
dependencies = [
    "langchain>=0.3.7,<0.4",
    "langchain-community>=0.3.5",
    "langchain-core>=0.3.15",
    "langchain-huggingface>=0.1.2",
    "langchain-chroma>=0.1.4",
    "langchain-text-splitters>=0.3.2",
    "langgraph>=0.2.40",
    "chromadb>=0.5.15",
    "sentence-transformers>=3.2.1",
    "rank-bm25>=0.2.2",
    "arxiv>=2.1.3",
    "pypdf>=5.0.1",
    "duckduckgo-search>=6.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gradio>=5.5.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "httpx>=0.27.2",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.4",
    "mypy>=1.13.0",
    "ipykernel>=6.29.5",
]
eval = [
    "ragas>=0.2.6",
    "datasets>=3.1.0",
]
groq = ["langchain-groq>=0.2.1"]
anthropic = ["langchain-anthropic>=0.2.4"]
openai = ["langchain-openai>=0.2.8"]
tracing = ["langsmith>=0.1.142"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
